tests/fixtures/untyped_polymorphic_module_inclusion_strict.rb
# @typedruby

class Foo
  include Enumerable
end
